[package]
name = "rustls-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-rustls = { version = "0.26.0", default-features = false, features = ["tls12", "ring"] }
futures-util = "0.3.30"
js-sys = "0.3.69"
pin-project-lite = "0.2.14"
thiserror = "1.0.63"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-streams = "0.4.0"
web-sys = { version = "0.3.69", features = ["ReadableStream", "WritableStream"] }
webpki-roots = "0.26.3"

[profile.release]
debug = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies.getrandom]
version = "*"
features = ["js"]

[dependencies.ring]
version = "*"
features = ["wasm32_unknown_unknown_js"]

[dependencies.rustls-pki-types]
version = "*"
features = ["web"]
